# p2p_rust

./: .gitignore  Cargo.toml  build.rs  readme.txt
src/: a.py  b.py  c.py  client.rs  d.py  f.py  g.py  get_ipv4.rs  get_ipv6.rs  get_ipv6_onefunc.rs  get_pip_port_keepalive.rs  gnewserver.py  helper.rs  initial_receiver.rs  main.rs  newserver.py  receiver.rs  receiver_ipv6.rs  recrelay.rs  sender.rs  sender_ipv6.rs  senderrelay.rs  server.rs  signalling_server.py  tcp_receiver_v6.rs  tcp_sender_v6.rs  test.rs  test2.rs  test3.rs  test_receiver.rs  test_ui.rs  testtcp.py  testtestui.rs  testtt.rs  true_test.rs  ui.rs
ui/: main-window.slint  test-window.slint  ui.slint
