[package]
name = "p2p_rust"
version = "0.1.0"
edition = "2024"
default-run = "main"
build = "build.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
rfd = "0.15.3"
slint = "1.10.0"
serde = {version = "1.0.219", features = ["derive"]}
bincode = "1.3"
reqwest = { version = "0.11", features = ["blocking"] }
crc16 = "0.4.0"

[build-dependencies]
slint-build = "1.10.0"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "ui"
path = "src/ui.rs"

[[bin]]
name = "client"
path = "src/client.rs"