[package]
name = "p2p_rust"
version = "0.1.0"
edition = "2024"
default-run = "main"
build = "build.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
rfd = "0.15.3"
slint = "1.10.0"
serde = {version = "1.0.219", features = ["derive"]}
bincode = "1.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
crc16 = "0.4.0"
serde_json = "1.0"
futures-util = "0.3"
tokio-tungstenite = "0.20"
tungstenite="0.20"
stunclient = "0.4"
rand = "0.8"
url = "2.5.4"

[build-dependencies]
slint-build = "1.10.0"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "ui"
path = "src/ui.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "receiver"
path = "src/receiver.rs"

[[bin]]
name = "sender"
path = "src/sender.rs"

[[bin]]
name = "test"
path = "src/test.rs"

[[bin]]
name = "test2"
path = "src/test2.rs"

[[bin]]
name = "test3"
path = "src/test3.rs"