[package]
name = "p2p_rust"
version = "0.1.0"
edition = "2024"
default-run = "main"
build = "build.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
rfd = "0.15.3"
slint = "1.10.0"
serde = {version = "1.0.219", features = ["derive"]}
bincode = "1.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
crc16 = "0.4.0"
serde_json = "1.0"
futures-util = "0.3"
tokio-tungstenite = "0.20"
tungstenite="0.20"
stunclient = "0.4"
rand = "0.8"
url = "2.5.4"
local-ip-address = "0.5"
get_if_addrs = "0.5"
pnet = "0.34.0"


[build-dependencies]
slint-build = "1.10.0"

[[bin]]
name = "get_ipv4"
path = "src/get_ipv4.rs"

[[bin]]
name = "get_ipv6"
path = "src/get_ipv6.rs"

[[bin]]
name = "get_pip_port_keepalive"
path = "src/get_pip_port_keepalive.rs"

[[bin]]
name = "helper"
path = "src/helper.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "receiver_ipv6"
path = "src/receiver_ipv6.rs"

[[bin]]
name = "sender_ipv6"
path = "src/sender_ipv6.rs"

[[bin]]
name = "sender"
path = "src/sender.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "test"
path = "src/test.rs"

[[bin]]
name = "ui"
path = "src/ui.rs"

[[bin]]
name = "tcp_sender_v6"
path = "src/tcp_sender_v6.rs"

[[bin]]
name = "tcp_receiver_v6"
path = "src/tcp_receiver_v6.rs"

[[bin]]
name = "test_ui"
path = "src/test_ui.rs"